plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.re-caring'
version = '0.0.1-SNAPSHOT'
description = 'recaring project'

def queryDslVersion = "7.0"

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	mockitoAgent
}

repositories {
	mavenCentral()
}

dependencies {

	//spring
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// DB
	runtimeOnly 'org.postgresql:postgresql'
	implementation("io.github.openfeign.querydsl:querydsl-core:${queryDslVersion}")
	implementation("io.github.openfeign.querydsl:querydsl-jpa:$queryDslVersion")
	annotationProcessor("io.github.openfeign.querydsl:querydsl-apt:$queryDslVersion:jpa")

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'

	// coolSMS
	implementation 'net.nurigo:sdk:4.3.0'

	// Firebase
	implementation 'com.google.firebase:firebase-admin:9.8.0'

	// AWS SDK v2
	implementation platform('software.amazon.awssdk:bom:2.25.60')
	implementation 'software.amazon.awssdk:sns'
	implementation 'software.amazon.awssdk:ssm'

	// Swagger (springdoc-openapi)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'

	// actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

// test
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation platform('org.testcontainers:testcontainers-bom:1.20.4')
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'org.mockito:mockito-core'
	mockitoAgent('org.mockito:mockito-core') { transitive = false }
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'integration'
	}
	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
}

tasks.register('integrationTest', Test) {
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath

	useJUnitPlatform {
		includeTags 'integration'
	}

	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
}


def generated = 'src/main/generated'

tasks.withType(JavaCompile).configureEach {
	options.getGeneratedSourceOutputDirectory().set(file(generated))
}

sourceSets {
	main.java.srcDirs += [ generated ]
}

clean {
	delete file('src/main/generated')
}
